Header en estrellas filtradas
Falta quitar espacios en blanco de los números leídos

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ CompareCatalogs/WDS_00 01 44.48 +59 05 27.1/Secondary/Stars_of_S_around_00 03 02
 CompareCatalogs/WDS_00 01 44.48 +59 05 27.1/primary.txt
 CompareCatalogs/WDS_00 01 44.48 +59 05 27.1/read.txt
 CompareCatalogs/bin/Dependencies.ucd
+CompareCatalogs/WDS_00 01 44.48 +59 05 27.1/Filtered_CatalogP/Filtered_Primary.txt
